--- a/elements/themes/redsnapper-theme/org-redsnapper-html.css
+++ b/elements/themes/redsnapper-theme/org-redsnapper-html.css
@@ -308,6 +308,167 @@ table tr:nth-child(2n) td {
 }
 
 
+/* ** media specific */
+@media print {
+  .codeblock,
+  pre.example,
+  pre.src {
+    white-space: pre.src-wrap;
+    overflow-x: hidden;
+    overflow-y: hidden;
+  }
+}
+
+@media print {
+  html,
+  body,
+  section {
+    background: none !important
+  }
+
+  * {
+    box-shadow: none !important;
+    text-shadow: none !important;
+    filter: none !important;
+    -ms-filter: none !important
+  }
+
+  a,
+  a:visited {
+    text-decoration: underline
+  }
+
+  pre.src,
+  blockquote {
+    page-break-inside: avoid
+  }
+
+  thead {
+    display: table-header-group
+  }
+
+  tr,
+  img {
+    page-break-inside: avoid
+  }
+
+  img {
+    max-width: 100% !important
+  }
+
+  @page {
+    margin: 0.5cm
+  }
+
+  p,
+  h2,
+  h3 {
+    orphans: 3;
+    widows: 3
+  }
+
+  h2,
+  h3 {
+    page-break-after: avoid
+  }
+}
+
+@media print {
+  #postamble {
+    display: none
+  }
+
+  #content {
+    margin-left: 0;
+    border: none;
+  }
+}
+
+@media print {
+  #table-of-contents {
+    display: none
+  }
+
+  @page {
+    size: auto;
+    margin: 5mm 5mm 5mm 5mm;
+  }
+
+  body {
+    margin: 0px;
+  }
+}
+
+@media screen and (max-width: 768px) {}
+
+@media only screen and (max-width: 480px) {}
+
+@media screen and (max-width: 768px) {
+  .tablet-hide {
+    display: none
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .mobile-hide {
+    display: none
+  }
+}
+
+@media screen and (max-width: 480px) {}
+
+@media screen and (max-width: 768px) {
+  #content {
+    margin-left: 0
+  }
+
+  #content #content {
+    padding: 1.618em
+  }
+
+  #content.shift {
+    position: fixed;
+    min-width: 100%;
+    left: 85%;
+    top: 0;
+    height: 100%;
+    overflow: hidden
+  }
+}
+
+@media screen and (min-width: 1400px) {
+  #content {
+    background: rgba(0, 0, 0, 0.05)
+  }
+
+  #content {
+    background: #fcfcfc
+  }
+}
+
+@media screen and (max-width: 768px) {
+  #copyright {
+    width: 85%;
+    display: none
+  }
+
+  #copyright.shift {
+    display: block
+  }
+
+  img {
+    width: 100%;
+    height: auto
+  }
+}
+
+@media screen and (max-width: 480px) {
+  #content .sidebar {
+    width: 100%
+  }
+}
+
+
 /* ** content body */
 
 .org-ul li
@@ -430,8 +591,8 @@ pre {
 
 pre.example
 {
-  overflow-x: scroll;
-  overflow-y: scroll;
+  /* overflow-x: scroll; */
+  /* overflow-y: scroll; */
   max-height: 400px;
   background-color: #3f3f3f;
   color: beige;
@@ -439,8 +600,8 @@ pre.example
 
 pre.src {
   position: relative;
-  overflow-x: scroll;
-  overflow-y: scroll;
+  /* overflow-x: scroll; */
+  /* overflow-y: scroll; */
   max-height: 400px;
   background-color: #292e34;
   color: white;
@@ -449,7 +610,9 @@ pre.src {
 pre.src:before {
   display: none;
   position: absolute;
-  background-color: white;
+  background-color: burlywood;
+  color: black;
+  margin-top: 10px;
   top: -10px;
   right: 10px;
   padding: 3px;
